# TEL211-Robot-Programming

Assignment-2/TEL211_Assignment_2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
Assignment-2/TEL211_Assignment_2_ws/install/imrt_teleop/share/imrt_teleop/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
Assignment-2/TEL211_Assignment_2_ws/install/imrt_virtual_joy/share/imrt_virtual_joy/: package.bash  package.dsv  package.sh
Assignment-2/TEL211_Assignment_2_ws/install/imrt_virtual_joy/share/imrt_virtual_joy/launch/: joy.launch.py
Assignment-2/TEL211_Assignment_2_ws/install/task2_bringup/share/task2_bringup/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
Assignment-2/TEL211_Assignment_2_ws/install/task2_bringup/share/task2_bringup/launch/: teleop_turtle.launch.py  turtlesim_teleop.launch.py
Assignment-2/TEL211_Assignment_2_ws/log/: latest_build
Assignment-2/TEL211_Assignment_2_ws/src/imrt_teleop/: package.xml  setup.py
Assignment-2/TEL211_Assignment_2_ws/src/imrt_teleop/imrt_teleop/: imrt_teleop.py  imrt_teleop_turtlesim.py
Assignment-2/TEL211_Assignment_2_ws/src/imrt_virtual_joy/: setup.py
Assignment-2/TEL211_Assignment_2_ws/src/imrt_virtual_joy/imrt_virtual_joy/: gamepad.py  gamepad_talker.py  virtual_gamepad.py
Assignment-2/TEL211_Assignment_2_ws/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
Assignment-2/TEL211_Assignment_2_ws/src/install/imrt_virtual_joy/share/imrt_virtual_joy/: package.ps1  package.sh  package.xml  package.zsh
Assignment-2/TEL211_Assignment_2_ws/src/log/: latest_build
Assignment-2/TEL211_Assignment_2_ws/src/task2_bringup/: package.xml  setup.cfg  setup.py
