<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>task2_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ludvik253@gmail.com">ludvikha</maintainer>
  <license>TODO: License declaration</license>

  <depend>turtlesim</depend>
  <depend>turtlebot3_gazebo</depend>
  <depend>imrt_virtual_joy</depend>
  <depend>imrt_teleop</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
